--- a/examples/fuel_map_demo.html
+++ b/examples/fuel_map_demo.html
@@ -7,12 +7,12 @@
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
   <script type="text/javascript" src="../gmaps.js"></script>
   <link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css" />
-  <link rel="stylesheet" type="text/css" href="examples.css" />
-  <script type="text/javascript" src="app.js"></script>
+  <link rel="stylesheet" type="text/css" href="fuel_map_demo.css" />
+  <script type="text/javascript" src="fuel_map_demo.js"></script>
 </head>
 
 <body>
-  <div id="floating-panel4">
+  <div id="div_startAndEnd">
     <b>Start: </b>
     <input id="origin-input" class="controls" type="text" placeholder="74 marvin lane", value="74 marvin lane, piscataway">
     <b>end: </b>
@@ -20,15 +20,15 @@
   </div>
   
   
-  <div id="floating-panel">
+  <div id="div_locate">
       <input id="locate" type="button" value="locate me">
   </div>
 
-  <div id="floating-panel2">
+  <div id="div_route">
     <input id="route" type="button" value="route me">
   </div>
   
-  <div id="floating-panel3">
+  <div id="div_changeGasType">
     <b>choose gas type: </b>
     <select id="gasType" onchange="changeGas()">
         <option value="all">all</option>
@@ -50,7 +50,7 @@
           routeMe();});      
   </script>
   <!-- <button onclick="locateMe()">Click me</button> -->
-  <h2>gmaps app</h2>
+  <h2>Fuel map demo</h2>
   <div class="row">
     <div class="span11">
       <div id="map"></div>
